fix alignment of subtitle

--- a/html/styles.css
+++ b/html/styles.css
@@ -66,6 +66,7 @@ body {
    display: inline-block;
    margin: 0 0 0 10px;
    padding: 0;
+   vertical-align: -2px;
    font-size: 12px;
    color: #555;
    font-weight: normal;
